--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,22 @@
 language: android
 android:
   components:
+    - tools
     - build-tools-25.0.0
     - android-25
     - extra
+    
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-19
+    
+    # Specify at least one system image,
+    # if you need to run emulator(s) during your tests
+    - sys-img-armeabi-v7a-android-22
+    - sys-img-x86-android-17
+    
   script:
     - chmod +x ./gradlew build connectedCheck
+    
