--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ android:
     - sys-img-x86-android-17
     
   script:
-    - chmod +x ./gradlew build connectedCheck
+    - chmod +x ./gradlew build
     
